--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ Lubbock, TX 79409</p>
 <h5>Email: <a href="mailto:julian.ludwig@ttu.edu" class="email">julian.ludwig@ttu.edu</a></h5>
 </div>
 <div id="cv-pdf" class="section level5">
-<h5>CV: [<a href="website/LimDon_resumeCV.pdf">PDF</a>]</h5>
+<h5>CV: [<a href="Website/LimDon_resumeCV.pdf">PDF</a>]</h5>
 <p><br></p>
 </div>
 <div id="research" class="section level1">
