--- a/index.html
+++ b/index.html
@@ -420,15 +420,15 @@ Entrepreneurship in Communities - [<a href="research/LimDon_WritingSample_Thesis
 	<ul>
 		<li>Lab 1: Implementation of instrumental variable (IV) procedures analyzing the effect of education (as years of schooling) on earnings (as hourly wages) (Card, 1995) - [<a href="/coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/AAEC 6311-lab #1(1).docx">DOCX</a>]</li>
 		<li>Lab 2: Estimating treatment effects assuming homogeneous and heterogeneous effects of education on fertility for women of childbearing age in Botswana - [<a href="">DOCX</a>]</li>
-		<li>Lab 3: Testing and correcting for heteroskedasticity using White's test, Breusch-Pagan test, and White's Heteroskedasticity-Consistent Covariance Matrix (HCCM) for the study of efficiency in production of U.S. airline services (Greene, 2007) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/AAEC 6311-lab_Heteroskedasticity (1).docx">DOCX</a>]</li>
+		<li>Lab 3: Testing and correcting for heteroskedasticity using White's test, Breusch-Pagan test, and White's Heteroskedasticity-Consistent Covariance Matrix (HCCM) for the study of efficiency in the production of U.S. airline services (Greene, 2007) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/AAEC 6311-lab_Heteroskedasticity (1).docx">DOCX</a>]</li>
 		<li>Lab 4: Estimating system of equations using seemingly unrelated regression (SUR) and simultaneous equations model (SEM) developed by Muellbauer (1980a; 1980b) in order to model a simplified version of a linear approximate almost ideal demand system (LA/AIDS) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 4/AAEC 6311-lab#4SUR_SEM_2021.docx">DOCX</a>]</li>
-		<li>Lab 5: Estimation of panel data models using the pooled model, fixed effect model, or random effects model regarding the outcome of wages (Cornell and Rupert, 1988) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/AAEC 6311-lab#5 Panel data.docx">DOCX</a>]</li>
+		<li>Lab 5: Estimation of panel data models using the pooled model, fixed-effect model, or random-effects model regarding the outcome of wages (Cornell and Rupert, 1988) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/AAEC 6311-lab#5 Panel data.docx">DOCX</a>]</li>
 	</ul>
 	<h3>AAEC 6311 Advanced Production Economics</h3>
 	<ul>
 		<li>Homework 1: Calculus review [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 1/AAEC5303_HW1_Lim.pdf">PDF</a>]</li>
 		<li>Homework 2: Rates of return, rate of technical substitution, and the elasticity of demand - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 2/AAEC6311_HW2_Lim.pdf">PDF</a>]</li>
-		<li>Homework 3: Profit under monopoly, Pareto optimal price and quantity, monoposony, and general equilibrium - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 3/AAEC6311_HW3_Lim.pdf">PDF</a>]</li>
+		<li>Homework 3: Profit under monopoly, Pareto optimal price and quantity, monopsony, and general equilibrium - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 3/AAEC6311_HW3_Lim.pdf">PDF</a>]</li>
 		<li>Homework 4: Social welfare, social costs, and marginal benefit - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 4/AAEC6311_HW_Lim.pdf">PDF</a>]</li>
 	</ul>
 <h2>Fall 2020</h2>
@@ -440,7 +440,7 @@ Entrepreneurship in Communities - [<a href="research/LimDon_WritingSample_Thesis
 		<li>Homework 3: Interpreting linear regression outputs, calculating marginal effects, and constructing t-tests and F-tests - [<a href="coursework/fall 2020/Homework 3/AAEC_HW3_Lim.pdf">PDF</a>]</li>
 		<li>Homework 4: Alternative model testing, dummy variables as slope and intercept shifters, and interpreting log-log function models - [<a href="coursework/fall 2020/Homework 4/AAEC_HW4_Lim.pdf">PDF</a>]</li>
 		<li>Homework 5: Interpreting log-linear models, testing for endogeneity affecting models (use of instrumental variables and the Hausman test), and using the just-identified or two-stage least squares method to estimate the parameters - [<a href="coursework/fall 2020/Homework 5/AAEC_HW5_Lim.pdf">PDF</a>]</li>
-		<li>Homework 6: Estimation of parameters under heteroskedasticity, computing the feasible generalized least squares (FGLS) estimator, and checking for the precense of autocorrelated errors in time-series data - [<a href="coursework/fall 2020/Homework 6/AAEC_HW6_Lim.pdf">PDF</a>]</li>
+		<li>Homework 6: Estimation of parameters under heteroskedasticity, computing the feasible generalized least squares (FGLS) estimator, and checking for the presence of autocorrelated errors in time-series data - [<a href="coursework/fall 2020/Homework 6/AAEC_HW6_Lim.pdf">PDF</a>]</li>
 	</ul>
 </div>
 
