--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h6 {
 
 <style type = "text/css">
 .main-container {
-  max-width: 940px;
+  max-width: 100px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -348,7 +348,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index-2.html"><span  style="font-size: 36px"> <span style="color: black">Don Lim</span></span></a>
+      <a class="navbar-brand" href="index.html"><span  style="font-size: 36px"> <span style="color: black">Don Lim</span></span></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -383,7 +383,7 @@ div.tocify {
 <div id="section" class="section level6">
 <h6><span class="math inline"></span></h6>
 <img src="photos/me.jpg" alt="logo" style="position:absolute; top:0; right:0; padding:20px;" width="35%"/>
-<p><b>M.S. Agricultural and Applied Economics</b><br/>
+<p><br/><b>M.S. Agricultural and Applied Economics</b><br/>
 	Texas Tech University <br/>
 	Lubbock, Texas<br/><br/>
 	<b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br/>
