--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ div.tocify {
 
 <div id="section" class="section level6">
 <h6><span class="math inline"></span></h6>
-<img src="photos/me.jpg" alt="logo" style="position:absolute; top:0; right:0; padding:20px;" width="35%"/>
+<img src="photos/me.jpg" align="right" alt="logo" style="top:0; right:0; padding:20px;" width="35%"/>
 <p><br/><b>M.S. Agricultural and Applied Economics</b><br/>
 	Texas Tech University <br/>
 	Lubbock, Texas<br/><br/>
@@ -391,7 +391,7 @@ div.tocify {
 	Prague, Czech Republic
 </p>
 	<p><br></p>
-	<p>Welcome! Feel free to take a look at the projects I have completed during <br/> my time as a graduate student.</p>
+	<p>Welcome! Feel free to take a look at the projects I have completed during my time as a graduate student.</p>
 <p><br></p>
 </div>
 <div id="email-lim.don93@gmail.com" class="section level5">
@@ -415,11 +415,11 @@ Entrepreneurship in Communities - [<a href="research/LimDon_WritingSample_Thesis
 <h2>Fall 2021</h2>
 	<h3>AAEC 6305 Economic Optimization</h3>
 	<h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
-<h2>Spring 2020</h2>
+<h2>Spring 2021</h2>
 	<h3>AAEC 5303 Applied Econometrics II</h3>
 	<ul>
-		<li>Lab 1: Implementation of instrumental variable (IV) procedures analyzing the effect of education (as years of schooling) on earnings (as hourly wages) (Card, 1995) - [<a href="/coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/AAEC 6311-lab #1(1).docx">DOCX</a>]</li>
-		<li>Lab 2: Estimating treatment effects assuming homogeneous and heterogeneous effects of education on fertility for women of childbearing age in Botswana - [<a href="">DOCX</a>]</li>
+		<li>Lab 1: Implementation of instrumental variable (IV) procedures analyzing the effect of education (as years of schooling) on earnings (as hourly wages) (Card, 1995) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/AAEC 6311-lab #1(1).docx">DOCX</a>]</li>
+		<li>Lab 2: Estimating treatment effects assuming homogeneous and heterogeneous effects of education on fertility for women of childbearing age in Botswana - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 2/AAEC 6311-lab#2 2021.docx">DOCX</a>]</li>
 		<li>Lab 3: Testing and correcting for heteroskedasticity using White's test, Breusch-Pagan test, and White's Heteroskedasticity-Consistent Covariance Matrix (HCCM) for the study of efficiency in the production of U.S. airline services (Greene, 2007) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/AAEC 6311-lab_Heteroskedasticity (1).docx">DOCX</a>]</li>
 		<li>Lab 4: Estimating system of equations using seemingly unrelated regression (SUR) and simultaneous equations model (SEM) developed by Muellbauer (1980a; 1980b) in order to model a simplified version of a linear approximate almost ideal demand system (LA/AIDS) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 4/AAEC 6311-lab#4SUR_SEM_2021.docx">DOCX</a>]</li>
 		<li>Lab 5: Estimation of panel data models using the pooled model, fixed-effect model, or random-effects model regarding the outcome of wages (Cornell and Rupert, 1988) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/AAEC 6311-lab#5 Panel data.docx">DOCX</a>]</li>
