--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ $(document).ready(function () {
                     <p><br></p>
                 </div>
                 <div id="research" class="section level1">
-                    <h1>Research</h1>
+                    <h1><u>Research</u></h1>
                     <div id="field-of-interest-empirical-macroeconomics" class="section level4">
                         <h4>Master's Thesis</h4>
                         <p>An Institutional Analysis on Open Source:
@@ -400,8 +400,9 @@ $(document).ready(function () {
                     </div>
                 </div>
                 <div id="coursework" class="section level1">
-                    <h1>Revelant Coursework</h1>
+                    <h1><u>Revelant Coursework</u></h1>
                     <h2>Fall 2021</h2>
+                    <div class="a">
                     <h3>AAEC 6305 Economic Optimization</h3>
                     <ul>
                         <li>Homework 1: Linear Programming Model - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf">PDF</a>]
@@ -418,7 +419,9 @@ $(document).ready(function () {
                             (2002) [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/Homework2_Lim.Rmd">R</a>]</li>
                     </ul>
+                    </div>
                     <h2>Spring 2021</h2>
+                    <div class="a">
                     <h3>AAEC 5303 Applied Econometrics II</h3>
                     <ul>
                         <li>Lab 1: Implementation of instrumental variable (IV) procedures analyzing the effect of
@@ -444,7 +447,9 @@ $(document).ready(function () {
                             general equilibrium - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 3/AAEC6311_HW3_Lim.pdf">PDF</a>]</li>
                         <li>Homework 4: Social welfare, social costs, and marginal benefit - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 4/AAEC6311_HW_Lim.pdf">PDF</a>]</li>
                     </ul>
+                    </div>
                     <h2>Fall 2020</h2>
+                    <div class="a">
                     <h3>AAEC 5307 Applied Econometrics I</h3>
                     <ul>
                         <li>Final Project: Economic Freedom and COVD-19. (where PDF contains the final submission, ZIP
@@ -466,6 +471,7 @@ $(document).ready(function () {
                             generalized least squares (FGLS) estimator, and checking for the presence of autocorrelated
                             errors in time-series data - [<a href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 6/AAEC_HW6_Lim.pdf">PDF</a>]</li>
                     </ul>
+                    </div>
                 </div>
             </div>
         </div>
