--- a/index.html
+++ b/index.html
@@ -379,18 +379,18 @@ $(document).ready(function () {
                     </p>
                     <p><br></p>
                     <p>Welcome! Feel free to take a look at the projects I have completed during my time as a graduate
-                        student.</p>
+                        student in the <a href="https://www.depts.ttu.edu/aaec/">Department of Agricultural and Applied Economics</a> at <a href="https://www.ttu.edu/">Texas Tech University</a> and at the <a href="https://www.cevroinstitut.cz/en/">Cevro Institute</a>.</p>
                     <p><br></p>
                 </div>
-                <div id="email-lim.don93@gmail.com" class="section level5">
+                <div id="email-lim.don93@gmail.com">
                     <h5>Email - <a href="mailto:lim.don93@gmail.com" class="email">lim.don93@gmail.com</a></h5>
                 </div>
-                <div id="cv-pdf" class="section level5">
+                <div id="cv-pdf">
                     <h5>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</h5>
                     <p><br></p>
                 </div>
                 <div id="research" class="section level1">
-                    <h1><u>Research</u></h1>
+                    <h1>Research</h1>
                     <div id="field-of-interest-empirical-macroeconomics" class="section level4">
                         <h4>Master's Thesis</h4>
                         <p>An Institutional Analysis on Open Source:
@@ -400,7 +400,7 @@ $(document).ready(function () {
                     </div>
                 </div>
                 <div id="coursework" class="section level1">
-                    <h1><u>Revelant Coursework</u></h1>
+                    <h1>Revelant Coursework</h1>
                     <h2>Fall 2021</h2>
                     <div class="a">
                     <h3>AAEC 6305 Economic Optimization</h3>
@@ -413,10 +413,10 @@ $(document).ready(function () {
                     <h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
                     <ul>
                         <li>Homework 1: Difference-in-Difference exercise on Card and Krueger's famous minimum wage and
-                            employment study (1993) [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf">PDF</a>]
+                            employment study (1993) - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim_code.Rmd">R</a>]</li>
                         <li>Homework 2: Propensity score matching exercise on Dehejia and Wahba's NSW program study
-                            (2002) [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf">PDF</a>]
+                            (2002) - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/Homework2_Lim.Rmd">R</a>]</li>
                     </ul>
                     </div>
@@ -425,18 +425,18 @@ $(document).ready(function () {
                     <h3>AAEC 5303 Applied Econometrics II</h3>
                     <ul>
                         <li>Lab 1: Implementation of instrumental variable (IV) procedures analyzing the effect of
-                            education (as years of schooling) on earnings (as hourly wages) (Card, 1995) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/AAEC 6311-lab #1(1).pdf">PDF</a>]</li>
+                            education (as years of schooling) on earnings (as hourly wages) (Card, 1995) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/Lab 1.pdf">PDF</a>]</li>
                         <li>Lab 2: Estimating treatment effects assuming homogeneous and heterogeneous effects of
-                            education on fertility for women of childbearing age in Botswana - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 2/AAEC 6311-lab#2 2021.pdf">PDF</a>]</li>
+                            education on fertility for women of childbearing age in Botswana - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 2/Lab 2.pdf">PDF</a>]</li>
                         <li>Lab 3: Testing and correcting for heteroskedasticity using White's test, Breusch-Pagan
                             test, and White's Heteroskedasticity-Consistent Covariance Matrix (HCCM) for the study of
-                            efficiency in the production of U.S. airline services (Greene, 2007) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/AAEC 6311-lab_Heteroskedasticity (1).pdf">PDF</a>]</li>
+                            efficiency in the production of U.S. airline services (Greene, 2007) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/Lab 3.pdf">PDF</a>]</li>
                         <li>Lab 4: Estimating system of equations using seemingly unrelated regression (SUR) and
                             simultaneous equations model (SEM) developed by Muellbauer (1980a; 1980b) in order to model
                             a simplified version of a linear approximate almost ideal demand system (LA/AIDS) - [<a
-                                href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 4/AAEC 6311-lab#4SUR_SEM_2021.pdf">PDF</a>]</li>
+                                href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 4/Lab 4.pdf">PDF</a>]</li>
                         <li>Lab 5: Estimation of panel data models using the pooled model, fixed-effect model, or
-                            random-effects model regarding the outcome of wages (Cornell and Rupert, 1988) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/AAEC 6311-lab#5 Panel data.pdf">PDF</a>]</li>
+                            random-effects model regarding the outcome of wages (Cornell and Rupert, 1988) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/Lab 5.pdf">PDF</a>]</li>
                     </ul>
                     <h3>AAEC 6311 Advanced Production Economics</h3>
                     <ul>
