--- a/index.html
+++ b/index.html
@@ -374,8 +374,11 @@ $(document).ready(function () {
                         Texas Tech University <br />
                         Lubbock, Texas<br /><br />
                         <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
-                        CEVRO Institute<br />
-                        Prague, Czech Republic
+                        CEVRO Institute<br /> 
+                        Prague, Czech Republic<br /><br />
+                        <b>B.A. General Studies (Political Science, Philosophy, History) </b><br />
+                        University of Michigan<br />
+                        Ann Arbor, Michigan
                     </p>
                     <p><br></p>
                     <p>Welcome! Feel free to take a look at the projects I have completed during my time as a graduate
