--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@ $(document).ready(function () {
                     <h2>Fall 2021</h2>
                     <div class="a">
                     <h3>AAEC 6305 Economic Optimization</h3>
-                    <ul>
+                    <ul class="a">
                         <li>Homework 1: Linear Programming Model - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/Homework1_Lim.mlx">MATLAB</a>]</li>
                         <li>Homework 2: Deterministic Dynamic Models - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.mlx">MATLAB</a>]</li>
                     </ul>
                     <h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
-                    <ul>
+                    <ul class="a">
                         <li>Homework 1: Difference-in-Difference exercise on Card and Krueger's famous minimum wage and
                             employment study (1993) - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim_code.Rmd">R</a>]</li>
@@ -426,7 +426,7 @@ $(document).ready(function () {
                     <h2>Spring 2021</h2>
                     <div class="a">
                     <h3>AAEC 5303 Applied Econometrics II</h3>
-                    <ul>
+                    <ul class="a">
                         <li>Lab 1: Implementation of instrumental variable (IV) procedures analyzing the effect of
                             education (as years of schooling) on earnings (as hourly wages) (Card, 1995) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/Lab 1.pdf">PDF</a>]</li>
                         <li>Lab 2: Estimating treatment effects assuming homogeneous and heterogeneous effects of
@@ -442,7 +442,7 @@ $(document).ready(function () {
                             random-effects model regarding the outcome of wages (Cornell and Rupert, 1988) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/Lab 5.pdf">PDF</a>]</li>
                     </ul>
                     <h3>AAEC 6311 Advanced Production Economics</h3>
-                    <ul>
+                    <ul class="a">
                         <li>Homework 1: Calculus review - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 1/AAEC5303_HW1_Lim.pdf">PDF</a>]</li>
                         <li>Homework 2: Rates of return, rate of technical substitution, and the elasticity of demand -
                             [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 2/AAEC6311_HW2_Lim.pdf">PDF</a>]</li>
@@ -454,7 +454,7 @@ $(document).ready(function () {
                     <h2>Fall 2020</h2>
                     <div class="a">
                     <h3>AAEC 5307 Applied Econometrics I</h3>
-                    <ul>
+                    <ul class="a">
                         <li>Final Project: Economic Freedom and COVD-19. (where PDF contains the final submission, ZIP
                             contains the original data, and R contains the R code used to clean original data) - [<a
                                 href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf">PDF</a>]
