--- a/index.html
+++ b/index.html
@@ -408,15 +408,16 @@ $(document).ready(function () {
                     <div class="a">
                     <h3>AAEC 6305 Economic Optimization</h3>
                     <ul class="a">
-                        <li>Homework 1: Linear Programming Model - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf">PDF</a>]
+                        <li>Homework 1: Linear Programming Model using the MATLAB Optimization toolbox - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/Homework1_Lim.mlx">MATLAB</a>]</li>
-                        <li>Homework 2: Deterministic Dynamic Models - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.pdf">PDF</a>]
+                        <li>Homework 2: Deterministic Dynamic Models using the <a href="https://pfackler.wordpress.ncsu.edu/compecon/154-2/">CompEcon toolbox</a> developed by Paul Fackler and Mario Miranda - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.mlx">MATLAB</a>]</li>
+                        <li>Midterm (where MATLAB 1 contains the solution to the first problem and MATLAB 2 to the second) - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Lim.pdf">PDF</a>] [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Problem_1.mlx">MATLAB 1</a>] [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Problem_2.mlx">MATLAB 2</a>]</li>
                     </ul>
                     <h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
                     <ul class="a">
                         <li>Homework 1: Difference-in-Difference exercise on Card and Krueger's famous minimum wage and
-                            employment study (1993) - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf">PDF</a>]
+                            employment study on New Jersey and Pennsylvania (1993) - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf">PDF</a>]
                             [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim_code.Rmd">R</a>]</li>
                         <li>Homework 2: Propensity score matching exercise on Dehejia and Wahba's NSW program study
                             (2002) - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf">PDF</a>]
