--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <style type="text/css">
       h1 {
         font-size: 34px;
+        font-weight: bold;
       }
 
       h1.title {
@@ -454,8 +455,8 @@
               <h3>AAEC 6305 Economic Optimization</h3>
               <ul class="a">
                 <li>
-                  Homework 1: Linear Programming Model using the MATLAB
-                  Optimization toolbox - [<a
+                  Homework 1: Linear Programming Model using the MATLAB <a href="https://www.mathworks.com/products/optimization.html">
+                    Optimization toolbox</a> - [<a
                     href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf"
                     >PDF</a
                   >] [<a
@@ -538,7 +539,7 @@
                 <li>
                   Lab 1: Implementation of instrumental variable (IV) procedures
                   analyzing the effect of education (as years of schooling) on
-                  earnings (as hourly wages) (Card, 1995) - [<a
+                  earnings (as hourly wages) (Card & Krueger, <a href="https://www.jstor.org/stable/2117925">1995</a>) - [<a
                     href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/Lab 1.pdf"
                     >PDF</a
                   >]
