--- a/index.html
+++ b/index.html
@@ -381,15 +381,15 @@
           <!--/.navbar -->
           <div class="fluid-row" id="header"></div>
           <img
-              src="photos/me.jpg"
-              align="right"
-              alt="logo"
-              style="top: 0; right: 0; padding: 20px"
-              width="25%"
-            />
+            src="photos/me.jpg"
+            align="right"
+            alt="logo"
+            style="top: 0; right: 0; padding: 20px"
+            width="25%"
+          />
           <div id="section" class="section level6">
             <h6><span class="math inline"></span></h6>
-            
+
             <p>
               <br /><b>M.S. Agricultural and Applied Economics</b><br />
               Texas Tech University <br />
@@ -429,7 +429,16 @@
             <h5>Resume - [<a href="cv/LimDon_resumeCV.pdf">PDF</a>]</h5>
             <p><br /></p>
           </div>
-          <hr style="height:2px;width:700px;margin-left: 0%; border-width:0;color:gray;background-color:gray">
+          <hr
+            style="
+              height: 2px;
+              width: 700px;
+              margin-left: 0%;
+              border-width: 0;
+              color: gray;
+              background-color: gray;
+            "
+          />
           <div id="research" class="section level1">
             <h1>Research</h1>
             <div
@@ -447,16 +456,38 @@
               </p>
             </div>
           </div>
-          <hr style="height:2px;width:700px;margin-left: 0%; border-width:0;color:gray;background-color:gray">
+          <hr
+            style="
+              height: 2px;
+              width: 700px;
+              margin-left: 0%;
+              border-width: 0;
+              color: gray;
+              background-color: gray;
+            "
+          />
           <div id="coursework" class="section level1">
             <h1>Relevant Coursework</h1>
             <h2>Fall 2021</h2>
             <div class="a">
+              <h3>AAEC 5301 Institutional Analysis</h3>
+              <ul class="a">
+                <li>
+                  Class presentation: <i>Low-Fat Diet on BMI, Obesity, Overweight, Blood
+                    Pressure, and Diabetes—A Two-Stage
+                    Difference-in-Difference</i> (term paper) - [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/presentation.pdf">PDF</a>]
+                </li>
+              </ul>
               <h3>AAEC 6305 Economic Optimization</h3>
               <ul class="a">
                 <li>
-                  Homework 1: Linear Programming Model using the MATLAB <a href="https://www.mathworks.com/products/optimization.html">
-                    Optimization toolbox</a> - [<a
+                  Homework 1: Linear Programming Model using the MATLAB
+                  <a
+                    href="https://www.mathworks.com/products/optimization.html"
+                  >
+                    Optimization toolbox</a
+                  >
+                  - [<a
                     href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf"
                     >PDF</a
                   >] [<a
@@ -490,13 +521,29 @@
                     >MATLAB 2</a
                   >]
                 </li>
+                <li>
+                  Class Presentation:
+                  <i
+                    >Stochastic Optimization of Medical Supply Location and
+                    Distribution in Disaster Management</i
+                  >
+                  (Mete,
+                  <a
+                    href="https://www.sciencedirect.com/science/article/abs/pii/S0925527309003582"
+                    >2010</a
+                  >) - [<a
+                    href="coursework/fall 2021/AAEC 6305 - Optimization/presentation/presentation.pdf"
+                    >PDF</a
+                  >]
+                </li>
               </ul>
               <h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
               <ul class="a">
                 <li>
                   Homework 1: Difference-in-Difference exercise on minimum wage
                   and employment study in New Jersey and Pennsylvania (Card &
-                  Krueger, <a href="https://www.nber.org/papers/w4509">1993</a>) - [<a
+                  Krueger, <a href="https://www.nber.org/papers/w4509">1993</a>)
+                  - [<a
                     href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf"
                     >PDF</a
                   >] [<a
@@ -506,7 +553,11 @@
                 </li>
                 <li>
                   Homework 2: Propensity score matching exercise on the NSW
-                  program study (Dehejia & Wahba, <a href="https://econpapers.repec.org/article/tprrestat/v_3a84_3ay_3a2002_3ai_3a1_3ap_3a151-161.htm">2002</a>) - [<a
+                  program study (Dehejia & Wahba,
+                  <a
+                    href="https://econpapers.repec.org/article/tprrestat/v_3a84_3ay_3a2002_3ai_3a1_3ap_3a151-161.htm"
+                    >2002</a
+                  >) - [<a
                     href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf"
                     >PDF</a
                   >] [<a
@@ -516,8 +567,12 @@
                 </li>
                 <li>
                   Homework 3: Synthetic control exercise on estimating the
-                  effect of California's tobacco program (Abadie, Diamond, and
-                  Hainmeuller, <a href="https://www.tandfonline.com/doi/abs/10.1198/jasa.2009.ap08746">2010</a>) - [<a
+                  effect of California's tobacco program (Abadie, Diamond &
+                  Hainmeuller,
+                  <a
+                    href="https://www.tandfonline.com/doi/abs/10.1198/jasa.2009.ap08746"
+                    >2010</a
+                  >) - [<a
                     href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 3/POLS 5385_Homework-3_Lim.html"
                     >R</a
                   >]
@@ -525,7 +580,11 @@
                 <li>
                   Homework 4: Regression discontinuity exercise on the effect of
                   voters on the decisions of politicians in office (Lee,
-                  Moretti, Butler, <a href="https://academic.oup.com/qje/article-abstract/119/3/807/1938834">2004</a>) - [<a
+                  Moretti & Butler,
+                  <a
+                    href="https://academic.oup.com/qje/article-abstract/119/3/807/1938834"
+                    >2004</a
+                  >) - [<a
                     href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 4/Homework-4.html"
                     >R</a
                   >]
@@ -539,7 +598,8 @@
                 <li>
                   Lab 1: Implementation of instrumental variable (IV) procedures
                   analyzing the effect of education (as years of schooling) on
-                  earnings (as hourly wages) (Card & Krueger, <a href="https://www.jstor.org/stable/2117925">1995</a>) - [<a
+                  earnings (as hourly wages) (Card & Krueger,
+                  <a href="https://www.jstor.org/stable/2117925">1995</a>) - [<a
                     href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/Lab 1.pdf"
                     >PDF</a
                   >]
@@ -575,7 +635,7 @@
                 <li>
                   Lab 5: Estimation of panel data models using the pooled model,
                   fixed-effect model, or random-effects model regarding the
-                  outcome of wages (Cornell and Rupert, 1988) - [<a
+                  outcome of wages (Cornell & Rupert, 1988) - [<a
                     href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/Lab 5.pdf"
                     >PDF</a
                   >]
@@ -616,20 +676,6 @@
             <div class="a">
               <h3>AAEC 5307 Applied Econometrics I</h3>
               <ul class="a">
-                <li>
-                  Final Project: Economic Freedom and COVID-19. (where PDF
-                  contains the final submission, ZIP contains the original data,
-                  and R contains the R code used to clean original data) - [<a
-                    href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf"
-                    >PDF</a
-                  >] [<a
-                    href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/Original Data.zip"
-                    >ZIP</a
-                  >] [<a
-                    href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/r_code.rmd"
-                    >R</a
-                  >]
-                </li>
                 <li>
                   Homework 1: Introduction to probability density functions and
                   calculating the rate of returns for the capital asset pricing
@@ -678,6 +724,20 @@
                   errors in time-series data - [<a
                     href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 6/AAEC_HW6_Lim.pdf"
                     >PDF</a
+                  >]
+                </li>
+                <li>
+                  Final Project: Economic Freedom and COVID-19. (where PDF
+                  contains the final submission, ZIP contains the original data,
+                  and R contains the R code used to clean original data) - [<a
+                    href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf"
+                    >PDF</a
+                  >] [<a
+                    href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/Original Data.zip"
+                    >ZIP</a
+                  >] [<a
+                    href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/r_code.rmd"
+                    >R</a
                   >]
                 </li>
               </ul>
