--- a/index.html
+++ b/index.html
@@ -439,21 +439,19 @@
               background-color: gray;
             "
           />
-          <div id="research" class="section level1">
-            <h1>Research</h1>
-            <div
-              id="field-of-interest-empirical-macroeconomics"
-              class="section level4"
-            >
-              <h2>Master's Thesis</h2>
-              <p>
-                An Institutional Analysis on Open Source: How Developers Use
-                Knowledge and Entrepreneurship in Communities - [<a
-                  href="research/LimDon_WritingSample_Thesis.pdf"
-                  >PDF</a
-                >] (Presented at the CEVRO Institute in partial fulfillment for
-                the degree of M.A. in PPE)
-              </p>
+          <div id="certifications" class="section level2">
+            <h1>Certificates</h1>
+            <div class="a">
+              <ul class="a">
+                <li>
+                  <a href="https://www.coursera.org/learn/intro-sql"
+                    >Introduction to Structured Query Language (SQL)</a
+                  >, University of Michigan (<a
+                    href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD"
+                    >GA25HJ4B4XRD</a
+                  >)
+                </li>
+              </ul>
             </div>
           </div>
           <hr
@@ -467,21 +465,31 @@
             "
           />
           <div id="coursework" class="section level1">
-            <h1>Relevant Coursework</h1>
+            <h1>Texas Tech University Relevant Coursework</h1>
             <h2>Fall 2021</h2>
             <div class="a">
               <h3>AAEC 5301 Institutional Analysis</h3>
               <ul class="a">
                 <li>
-                  Class presentation: <i>Low-Fat Diet on BMI, Obesity, Overweight, Blood
-                    Pressure, and Diabetes—A Two-Stage
-                    Difference-in-Difference</i> (term paper) - [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/presentation.pdf">PDF</a>]
+                  Class presentation:
+                  <i
+                    >Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
+                    and Diabetes—A Two-Stage Difference-in-Difference</i
+                  >
+                  (term paper) - [<a
+                    href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/presentation.pdf"
+                    >PDF</a
+                  >]
+                </li>
+                <li>
+                  Term paper (also submitted to POLS 5385): <i>Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
+                    and Diabetes—A Two-Stage Difference-in-Difference</i> - [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/fbdg_finaldraft.pdf">PDF</a>]
                 </li>
               </ul>
               <h3>AAEC 6305 Economic Optimization</h3>
               <ul class="a">
                 <li>
-                  Homework 1: Linear Programming Model using the MATLAB
+                  Homework 1: Linear programming model (LPM) using the MATLAB
                   <a
                     href="https://www.mathworks.com/products/optimization.html"
                   >
@@ -496,7 +504,7 @@
                   >]
                 </li>
                 <li>
-                  Homework 2: Deterministic Dynamic Models using the
+                  Homework 2: Deterministic dynamic models (DDM) using the
                   <a href="https://pfackler.wordpress.ncsu.edu/compecon/154-2/"
                     >CompEcon toolbox</a
                   >
@@ -522,7 +530,7 @@
                   >]
                 </li>
                 <li>
-                  Class Presentation:
+                  Class presentation:
                   <i
                     >Stochastic Optimization of Medical Supply Location and
                     Distribution in Disaster Management</i
@@ -540,7 +548,7 @@
               <h3>POLS 5385 Causal Inference and Quasi-Experimental Methods</h3>
               <ul class="a">
                 <li>
-                  Homework 1: Difference-in-Difference exercise on minimum wage
+                  Homework 1: Difference-in-difference exercise on minimum wage
                   and employment study in New Jersey and Pennsylvania (Card &
                   Krueger, <a href="https://www.nber.org/papers/w4509">1993</a>)
                   - [<a
@@ -552,7 +560,7 @@
                   >]
                 </li>
                 <li>
-                  Homework 2: Propensity score matching exercise on the NSW
+                  Homework 2: Propensity score matching (PSM) exercise on the NSW
                   program study (Dehejia & Wahba,
                   <a
                     href="https://econpapers.repec.org/article/tprrestat/v_3a84_3ay_3a2002_3ai_3a1_3ap_3a151-161.htm"
@@ -579,8 +587,8 @@
                 </li>
                 <li>
                   Homework 4: Regression discontinuity exercise on the effect of
-                  voters on the decisions of politicians in office (Lee,
-                  Moretti & Butler,
+                  voters on the decisions of politicians in office (Lee, Moretti
+                  & Butler,
                   <a
                     href="https://academic.oup.com/qje/article-abstract/119/3/807/1938834"
                     >2004</a
@@ -727,7 +735,7 @@
                   >]
                 </li>
                 <li>
-                  Final Project: Economic Freedom and COVID-19. (where PDF
+                  Term paper: Economic Freedom and COVID-19. (where PDF
                   contains the final submission, ZIP contains the original data,
                   and R contains the R code used to clean original data) - [<a
                     href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf"
@@ -738,6 +746,33 @@
                   >] [<a
                     href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/r_code.rmd"
                     >R</a
+                  >]
+                </li>
+              </ul>
+            </div>
+          </div>
+          <hr
+            style="
+              height: 2px;
+              width: 700px;
+              margin-left: 0%;
+              border-width: 0;
+              color: gray;
+              background-color: gray;
+            "
+          />
+          <div id="research" class="section level1">
+            <h1>CEVRO Institute Master's Thesis</h1>
+            <div
+              id="cevro"
+              class="a"
+            >
+              <ul class="a">
+                <li>
+                  <i>An Institutional Analysis on Open Source: How Developers Use
+                    Knowledge and Entrepreneurship in Communities</i> - [<a
+                    href="research/LimDon_WritingSample_Thesis.pdf"
+                    >PDF</a
                   >]
                 </li>
               </ul>
