--- a/index.html
+++ b/index.html
@@ -762,14 +762,14 @@
             "
           />
           <div id="research" class="section level1">
-            <h1>CEVRO Institute Master's Thesis</h1>
+            <h1>CEVRO Institute</h1>
             <div
               id="cevro"
               class="a"
             >
               <ul class="a">
                 <li>
-                  <i>An Institutional Analysis on Open Source: How Developers Use
+                  Master's thesis: <i>An Institutional Analysis on Open Source: How Developers Use
                     Knowledge and Entrepreneurship in Communities</i> - [<a
                     href="research/LimDon_WritingSample_Thesis.pdf"
                     >PDF</a
